[build-system]
requires = ['setuptools>=40.8.0']
build-backend = 'setuptools.build_meta'

[project]
name = "sample"
version = "0.1.0"
description = "Sample Python package with a command-line script"
authors = [{name = "Abhishek Dasgupta", email = "abhishek.dasgupta@dtc.ox.ac.uk"}]
license = {file = "LICENSE"}
requires-python = ">=3.10"
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
  "requests>=2",
  "fastjsonschema>=2.16",
]

[project.optional-dependencies]
test = [
  "pytest"
]

[project.urls]
Home = "https://github.com/abhidg/python-package"

[project.scripts]
sample = "sample:main"
